<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/deviceUp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"
        android:src="@drawable/ic_arrow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imgCompass"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/_12sdp"
        android:src="@drawable/compass_background"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1:1"/>

    <TextView
        android:id="@+id/statusDegreesText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/degree_0"
        style="@style/header_primary_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/status_cardinal_direction_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/des_direction_north"
        style="@style/header_primary_12"
        app:layout_constraintEnd_toEndOf="@id/statusDegreesText"
        app:layout_constraintStart_toStartOf="@id/statusDegreesText"
        app:layout_constraintTop_toBottomOf="@id/statusDegreesText" />

    <TextView
        android:id="@+id/cardinal_direction_north_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/direction_north"
        style="@style/header_primary_14"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/cardinal_direction_east_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/direction_east"
        style="@style/header_primary_14"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/cardinal_direction_south_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/direction_south"
        style="@style/header_primary_14"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/cardinal_direction_west_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/direction_west"
        style="@style/header_primary_14"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/degree_0_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/degree_0"
        style="@style/header_primary_10"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/degree_30_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/degree_30"
        style="@style/header_primary_10"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/degree_60_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/degree_60"
        style="@style/header_primary_10"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/degree_90_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/degree_90"
        style="@style/header_primary_10"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/degree_120_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/degree_120"
        style="@style/header_primary_10"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/degree_150_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/degree_150"
        style="@style/header_primary_10"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/degree_180_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/degree_180"
        style="@style/header_primary_10"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/degree_210_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/degree_210"
        style="@style/header_primary_10"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/degree_240_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/degree_240"
        style="@style/header_primary_10"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/degree_270_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/degree_270"
        style="@style/header_primary_10"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/degree_300_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/degree_300"
        style="@style/header_primary_10"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/degree_330_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/degree_330"
        style="@style/header_primary_10"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>